# baxter_moveit_stomp_trac_ik_config

./: CMakeLists.txt  README.md
baxter_scenes/: Glennan210.sence
config/: baxter.srdf  controllers.yaml  controllers.yaml~  joint_names.yaml  kinematics (copy).yaml  kinematics.yaml  kinematics.yaml~  stomp_config.yaml  stomp_planning-2.yaml  stomp_planning.yaml  stomp_planning.yaml~  stomp_planning_1.yaml
launch/: baxter_moveit_planning_execution.launch  baxter_moveit_planning_execution.launch~  controller_manager.launch.xml  demo _2.launch~  demo.launch  demo.launch~  move_group.launch  move_group.launch~  move_group_2.launch  moveit.rviz  planning_pipeline.launch.xml  run_benchmark_ompl.launch~  stomp_planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml~  trajectory_execution.launch.xml
src/: baxter_moveit_pick_and_place (copy).cpp  baxter_moveit_pick_and_place (copy).cpp~  baxter_moveit_pick_and_place.cpp  baxter_moveit_pick_and_place.cpp~  baxter_moveit_stomp_trac_ik_tutorial.cpp  baxter_moveit_stomp_trac_ik_tutorial.cpp~  give_goal.cpp  give_goal_and_move.cpp  give_goal_and_move.cpp~  joint_angles.cpp  joint_angles.cpp~  joint_pub.cpp~  joint_pub_1.cpp.autosave  joint_pub_2.cpp  joint_pub_3.cpp  joint_pub_3.cpp~  motion_planning.cpp  motion_planning.cpp~  move_group_interface_tutorial (copy).cpp~  move_group_interface_tutorial.cpp  move_group_interface_tutorial.cpp~  pick_place-2.cpp  pick_place.cpp  pick_place.cpp~  pick_place_1.cpp~  pick_place理解.cpp  pick_place理解.cpp~
trac_ik/trac_ik_examples/: CMakeLists.txt
trac_ik/trac_ik_examples/src/: baxter_trac_ik.cpp  baxter_trac_ik.cpp~  change.cpp  joint_pub.cpp  joint_pub.cpp~
